# Angmini

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  IMPLEMENTATION_STATUS.md  LICENSE  PLAN.md  PLAN_APP_MAC.md  PLAN_for_AI_Agent.md  README.md  SUPERVISOR.md  SmartScheduler-Desktop-개발계획서.md  SmartScheduler-설계문서-v4.md  angmini_cli.py  build-app.sh  debug_file_tool.py  main.py  pyproject.toml  requirements.txt  run-app.sh  run-frontend.sh  test_apple_mcp.py  test_crewai.py  test_message_send.py  test_simple.py
.claude/: settings.local.json
.serena/: project.yml
agents/: __init__.py  base_agent.py  file_agent.py  memory_agent.py  notion_agent.py  planner_agent.py  system_agent.py
ai/: ai_brain.py
app-mac/: README.md  package-lock.json  package.json  vite.config.ts
archive/: tool_manager.py
backend/: README.md  agent.py  bot.py  config.py  database.py  models.py  prompt.md  requirements.txt  start.sh  tools.py
claudedocs/: memory_enhancement_implementation_summary.md  memory_system_enhancement.md  research_ai_agent_systems_20251002.md  research_ai_agent_systems_20251002_abstract.md
crew/: crew_config.py  task_factory.py
docs/: APPLE_MCP_분석_보고서.md  APPLE_TOOL_GUIDE.md  CLI_SETUP_COMPLETE.md  CREWAI_MIGRATION_PLAN.md  ENHANCED_MEMORY_SYSTEM.md  INSTALL.md  MULTIMODAL_UPGRADE_PLAN.md  PLAN_APP_MAC.md  PLAN_BACKEND.md  PLAN_UIUX_RENEWAL_2025-11-27.md  PLAN_for_Users.md  REFACTORING_PLAN.md  React_Engine_Design.md  SUPERVISOR.md  SmartScheduler-디자인-리뉴얼-계획서.md  TESTING.md  USAGE.md  instructions.md  memory_maintenance.md
interface/: __init__.py  cli.py  (+4 more)
(+190 files in other folders)
