[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angmini"
version = "2.0.0"
description = "Personal AI Assistant built on Google Gemini with CrewAI multi-agent framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Angmini Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.5.0",
    "discord.py>=2.3.2",
    "notion-client>=2.2.0",
    "torch>=2.1.0",
    "transformers>=4.51.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.8.0",
    "send2trash>=1.8.2",
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
angmini = "angmini_cli:main"

[tool.setuptools]
py-modules = ["main", "angmini_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "crew*", "agents*", "mcp*", "interface*"]
